Make more fields use b3-text-input; style changes * Make most input fields use a monospace font * Make root properties use b3-text-input * Make the keys of dictionary properties use b3-text-input * Make the add / remove buttons in the properties panel less wide * property.js: Move $scope.parseJson to the textInput.js module * Miscellaneous code refactoring

--- a/src/app/node/modal-addnode.html
+++ b/src/app/node/modal-addnode.html
@@ -19,12 +19,12 @@
 
           <div class="row">
             <label>Name</label>
-            <input id="name" type="text" placeholder="name" />
+            <input id="name" type="text" placeholder="name" class="monospace">
           </div>
 
           <div class="row">
             <label>Title</label>
-            <input id="title" type="text" placeholder="title"/>
+            <input id="title" type="text" placeholder="title">
           </div>
 
           <div class="row" id="addnode-properties">
@@ -64,12 +64,12 @@
 
           <div class="row" id="addnode-category" style="display: none;">
             <label>Category</label>
-            <input id="category" type="text" placeholder="category" value="{{category}}"/>
+            <input id="category" type="text" placeholder="category" value="{{category}}" class="monospace">
           </div>
 
           <div class="row" id="addnode-script" style="display: none;">
             <label>Script</label>
-            <input id="script" type="text" placeholder="script"/>
+            <input id="script" type="text" placeholder="script" class="monospace">
           </div>
         </form>
       </div>
