Bug fixes and tweaks * Make MoveBlocks mark changes as unsaved again. * Add a minimum distance requirement to MoveBlocks * Fix the previous list of nodes not clearing on project load * Fix: The selection box does not disappear when the user lets go of the mouse button. * Fix: Opening a project does not clear the previous nodes. * Make opening a project remove all opened trees from the editor. * Fix some issues with the tree tab bar that occur when opening a project while an existing tree is open. * Fix some unexpected behavior with pressing enter while editing a text field in the Add Node modal, the Edit Node modal, or in the Properties panel. * Correct documentation for b3-property.

--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -907,6 +907,11 @@ div.collapsible-list-items.hidden {
   margin: 0px;
   width: 20px;
 }
+.property-panel .row .button.text-expand {
+  padding: 3px 5px;
+  margin: 0px;
+  width: auto;
+}
 .property-panel label .button {
   margin-right: 1px !important;
 }
@@ -986,6 +991,11 @@ table.property .balloon-container {
 }
 table.property #value .button {
   padding: 0px;
+}
+table.property #value .button.text-expand {
+  padding: 3px 5px;
+  margin: 0px;
+  width: auto;
 }
 table.property .data-aggregate input {
   width: calc(100% - 10px);
