--- a/src/app/common/fileinput/file-input.html
+++ b/src/app/common/fileinput/file-input.html
@@ -1,3 +1,3 @@
-<button id="b3-file-input-button" ng-click="browse()">Browse</button>
+<a href="#" class="button" id="b3-file-input-button" ng-click="browse()">Browse</a>
 <span id="b3-file-input-display">{{getDisplayValue()}}</span>
 <input id="b3-file-input-value" type="hidden" ng-value="value">
