--- a/src/app/common/textInput/textInput.html
+++ b/src/app/common/textInput/textInput.html
@@ -2,7 +2,9 @@
        placeholder="{{placeholder}}"
        ng-class="{expandable: expandable, 'border-warning': inputAlert.level == 'warning',
                   'border-error': inputAlert.level == 'error'}">
-<button class="secondary inline text-expand" title="Show More" ng-click="expandText()" ng-show="expandable">...</button>
+<a href="#" class="button secondary inline text-expand" title="Show More" ng-click="expandText()" ng-show="expandable">
+  ...
+</a>
 <br>
 <span ng-class="{expandable: expandable, 'balloon-warning': inputAlert.level == 'warning', 'balloon-error': inputAlert.level == 'error'}">
   {{inputAlert.message}}
