Past notifications; "Browse" button styling fix; dedicated notify functions * Add ability to view past notifications and refactor code accordingly * Fix a styling issue with the "Browse" button * Add dedicated notify<Level> methods to editor.js, which makes displaying notifications slightly less insecure.

--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -41,6 +41,8 @@
           <li class="divider"></li>
           <li><a ng-click="onButtonCollapseAll()" href="#">Collapse All</a></li>
           <li><a ng-click="onButtonExpandAll()" href="#">Expand All</a></li>
+          <li class="divider"></li>
+          <li><a ng-click="onButtonShowNotifications()" href="#">Show Notifications</a></li>
         </ul>
       </li>
       <li><a href="#">Selection</a>
