--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -499,6 +499,10 @@ div.collapsible-list-items.hidden {
   margin: 0px;
   width: 20px;
 }
+.modal .row .button#b3-file-input-button {
+  padding: 0.375rem 1.75rem 0.4375rem;
+  width: auto;
+}
 .modal label .button {
   margin-right: 1px !important;
 }
@@ -593,6 +597,14 @@ div.collapsible-list-items.hidden {
   transition: opacity linear 0.5s;
 
   pointer-events: all;
+}
+.modal-body .notification {
+  opacity: 1.0;
+  -webkit-transition: none;
+  transition: none;
+  text-align: left;
+  margin: 5px;
+  width: auto;
 }
 .notification.warn {
   color: #a9a242;
